--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="container border calculator second third first p-3 mt-5 " id="calcu">
         <div class=" container border-primary p-3 rounded screen" >
             <input type="text" readonly placeholder="0" id="screen" class="text-end w-100 h-100 form-control">
+            <p class="time text-end" id="time"></p>
         </div>
         <div class="row container mt-3 sci-op d-flex justify-content-around">
                 <button class=" op text-center col-sm-3" onclick="sin()">sin</button>
